# BasicEngine

./: .gitignore  CMakeLists.txt  img4.txt  img5.txt  img6.txt  readme.txt  scene.txt
DisplayGLFW/: DisplayGLFW.vcxproj  DisplayGLFW.vcxproj.filters  display.cpp  display.h
DisplayGLFW/Debug/: CL.read.1.tlog  CL.write.1.tlog  DisplayGLFW.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
DisplayGLFW/Release/: CL.read.1.tlog  CL.write.1.tlog  DisplayGLFW.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
Engine3D/: Camera.cpp  Colour.cpp  Colour.h  Image.cpp  Image.h  IndexBuffer.cpp  Intersection.h  Log.cpp  Log.hpp  Mesh.cpp  Mesh.h  MeshConstructor.cpp  MeshConstructor.h  MovableGLM.cpp  MovableGLM.h  Point.cpp  Point.h  Ray.cpp  Ray.h  RayCamera.cpp  RayCamera.h  RayLightsource.cpp  RayLightsource.h  RayObject.cpp  RayObject.h  RayScene.cpp  RayScene.h  RayScreen.cpp  RayScreen.h  VertexArray.cpp  VertexBuffer.cpp  camera.h  obj_loader.cpp  obj_loader.h  scene.cpp  scene.h  shader.cpp  shader.h  shape.cpp  shape.h  (+3 more)
Game/: Game.vcxproj  Game.vcxproj.filters  InputManager.h  RubiksCube.cpp  RubiksCube.h  game.cpp  game.h  main.cpp
Game/Debug/: CL.read.1.tlog  CL.write.1.tlog  Game.vcxprojResolveAssemblyReference.cache  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
Game/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/includes/glad/include/glad/: glad.h
res/shaders/: basicShader.fs  basicShader.vs  pickingShader.fs  pickingShader.vs
res/shaders/shaders/: basicShader.fs  basicShader.vs  pickingShader.fs  pickingShader.vs
